# NSP2

./: background_20min_30_11.csv  compton1.csv  cross_section.py  fit.py  fitten_rechte_lijn.py  pyproject.toml  reader.py  smoothing.py  spectrum_CS137.csv  spectrum_NA22.csv
23_11/: compton2.csv
30_11/: 1h_30_11.csv  edge_30_11.csv
calibratie/: spectrum_NA22.csv  spectrum_background.csv
data/04_12/: 1h_45d_4_12.csv  1h_90d_4_12.csv  background_20m_45d_4_12.csv  background_20m_90d_4_12.csv
data/30_11/: background_30_11.csv
data/7_12/: 1h_35d_7_12.csv  background_20m_35d_7_12.csv
src/nsp2/: calculating_error.py  cross_section.py  fitten_rechte_lijn.py  smoothing.py
