[tool.poetry]
name = "nsp2"
version = "0.1.0"
description = ""
authors = ["GroggyGosling <bonnedijk@ziggo.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
lmfit = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
